--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "anytree>=2.12.1",
     "graphviz>=0.20.3",
+    "ipykernel>=6.29.5",
     "ply>=3.11",
 ]
 
